css and html commits for nav and quiz title

--- a/index1.html
+++ b/index1.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coding Quiz</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="./assets/styles/styles.css" />
+    <title>Coding Quiz</title>
   </head>
   <body>
     <!-- nav tag -->
@@ -13,7 +17,7 @@
       <!-- nav link home -->
       <nav class="nav-container">
         <a href="" class="nav-link"> Home </a>
-        <a href="" class="nav-link"> Scores </a>
+        <a href="" class="nav-link"> Highscores </a>
       </nav>
     </header>
 
