done css for second page

--- a/index1.html
+++ b/index1.html
@@ -16,8 +16,8 @@
     <header class="header">
       <!-- nav link home -->
       <nav class="nav-container">
-        <a href="" class="nav-link"> Home </a>
-        <a href="" class="nav-link"> Highscores </a>
+        <a href="index1.html" class="nav-link"> Home </a>
+        <a href="./secondpage.html" class="nav-link"> Highscores </a>
       </nav>
     </header>
 
@@ -27,7 +27,11 @@
       <section class="content-section" id="start-quiz-section">
         <div class="quizContainer">
           <h1 class="quiz-title">Coding Quiz</h1>
-          <h3 class="quiz-info">Press Start to begin quiz.</h3>
+          <p class="quiz-info">
+            To begin this quiz you will need to press this start button.There
+            will a timer running and you must try to attempt all of the
+            questions. You will see your results in the end. Good Luck!!! 😏
+          </p>
         </div>
         <div>
           <button id="start-quiz">Start!</button>
