--- a/secondpage.html
+++ b/secondpage.html
@@ -24,30 +24,22 @@
       <!-- timer section -->
       <section id="timer-section">
         <div>
-          <p><span id="timer-span"></span></p>
+          <p><span id="timer-span">Time Remaining:</span></p>
         </div>
-      </section>
-
-      <!-- questions section -->
-      <section id="questions-section">
-        <h2 class="questions-title"></h2>
-        <ul class="question-list">
-          <li class="list items"></li>
-          <li class="list items"></li>
-          <li class="list items"></li>
-          <li class="list items"></li>
-        </ul>
       </section>
 
       <!-- form section -->
       <section id="form-selection">
         <form>
-          <div class="score"></div>
-          <div id="full-name-input"></div>
-          <div id="btn"><button></button></div>
-
+          <input type="text" class="full-name-input">
+          <div id="btn">
+            <button type="submit">view your score.</button
+            ></div>
+          </form>
           <!-- renderAlert -->
-          <div></div>
+          <div>
+            
+          </div>
         </form>
       </section>
     </main>
