start button js

--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/styles/styles.css" />
     <title>Coding Quiz</title>
   </head>
-  <body>
+  <body id="body-of-page">
     <!-- nav tag -->
     <header class="header">
       <!-- nav link home -->
