completed styling and doing questions for java

--- a/secondpage.html
+++ b/secondpage.html
@@ -19,30 +19,15 @@
           <a href="./secondpage.html" class="nav-link"> Highscores </a>
         </nav>
       </header>
-
-    <main>
-      <!-- timer section -->
-      <section id="timer-section">
-        <div>
-          <p><span id="timer-span">Time Remaining:</span></p>
-        </div>
-      </section>
-
-      <!-- form section -->
-      <section id="form-selection">
-        <form>
-          <input type="text" class="full-name-input">
-          <div id="btn">
-            <button type="submit">view your score.</button
-            ></div>
-          </form>
-          <!-- renderAlert -->
+      <main id="main-2">
+        <section id="high-scores">
+          <h1></h1>
+          <h2></h2>
           <div>
-            
+            <a></a>
           </div>
-        </form>
-      </section>
-    </main>
+        </section>
+      </main>
     <script src="./assets/js/script2.js"></script>
   </body>
 </html>
