--- a/index1.html
+++ b/index1.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="./assets/styles/styles.css" />
+
     <title>Coding Quiz</title>
   </head>
-  <body id="body-of-page">
+  <body id="body">
     <!-- nav tag -->
     <header class="header">
       <!-- nav link home -->
@@ -22,9 +26,9 @@
     </header>
 
     <!-- main tag -->
-    <main class="main" id="main">
+    <main id="main">
       <!-- section of the page -->
-      <section class="content-section" id="start-quiz-section">
+      <section id="start-quiz-section">
         <div class="quizContainer">
           <h1 class="quiz-title">Coding Quiz</h1>
           <p class="quiz-info">
@@ -36,12 +40,42 @@
         <div>
           <button id="start-quiz">Start!</button>
         </div>
-        <!-- render alert -->
-        <div></div>
+      </section>
+
+      <!-- timer section -->
+      <section id="timer-section">
+        <p><span id="timer-span">Time Remaining:</span></p>
+      </section>
+
+      <!-- questions -->
+      <section class="questions"></section>
+      <h2 class="question">questions</h2>
+      <ul class="list of options">
+        <li class="list-items">options</li>
+        <li class="list-items"></li>
+        <li class="list-items"></li>
+        <li class="list-items"></li>
+      </ul>
+
+      <!-- form section -->
+      <section id="form-selection">
+        <form>
+          <!-- score -->
+          <h6 id="score"></h6>
+          <div input type="number"></div>
+          <!-- full name -->
+          <div input type="text" class="full-name-input"></div>
+          <!-- button -->
+          <div id="btn">
+            <button type="submit">submit</button>
+          </div>
+          <!-- render alert -->
+          <div class="alert alert-primary" role="alert">
+            Please enter your name.
+          </div>
+        </form>
       </section>
     </main>
-    <!-- footer -->
-    <footer></footer>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
