appended questions need to fix css

--- a/index1.html
+++ b/index1.html
@@ -27,7 +27,7 @@
 
     <!-- main tag -->
     <main id="main">
-      <!-- section of the page -->
+      section of the page
       <section id="start-section">
         <h1 class="quiz-title">Coding Quiz</h1>
         <p class="quiz-info">
@@ -49,10 +49,8 @@
       <section class="questions">
         <h2 class="question-head"></h2>
         <ul class="list of options">
-          <li class="list-items">options</li>
-          <li class="list-items"></li>
-          <li class="list-items"></li>
-          <li class="list-items"></li>
+          <li class="list-items">Yes</li>
+          <li class="list-items">No</li>
         </ul>
         <div class="btn-control">
           <button class="btn" id="next-button">Next</button>
