css styling updated and html updated

--- a/index1.html
+++ b/index1.html
@@ -39,38 +39,36 @@
         </div>
       </section>
 
-      <!-- timer section -->
-      <section id="timer-section">
-        <p><span id="timer-span">Time Remaining:</span></p>
-      </section>
-
-      <!-- questions -->
+      <!-- questions
       <section class="questions">
         <h2 class="question-head"></h2>
         <ul class="list of options">
-          <li class="list-items">Yes</li>
-          <li class="list-items">No</li>
+          <li class="list-items"></li>
+          <li class="list-items"></li>
         </ul>
         <div class="btn-control">
           <button class="btn" id="next-button">Next</button>
         </div>
+      </section> -->
+
+      <!-- timer section -->
+      <section id="timer-section">
+        <p><span id="timer-span">Time Remaining:</span></p>
       </section>
       <!-- form section -->
       <section id="form-selection">
-        <form>
+        <form class="form">
           <!-- score -->
-          <h6 id="score"></h6>
+          <h6 id="score">Your score is :</h6>
           <div input type="number"></div>
           <!-- full name -->
-          <div input type="text" class="full-name-input"></div>
+          <div class="full-name-input" input type="text">Name Input</div>
           <!-- button -->
           <div id="btn">
-            <button type="submit">submit</button>
+            <button type="submit" class="btn-2">submit</button>
           </div>
           <!-- render alert -->
-          <div class="alert alert-primary" role="alert">
-            Please enter your name.
-          </div>
+          <div class="alert" role="alert">Please enter your name.</div>
         </form>
       </section>
     </main>
