--- a/index1.html
+++ b/index1.html
@@ -38,13 +38,12 @@
           <button class="start-quiz" id="start-btn">Start!</button>
         </div>
       </section>
-
-      <!-- questions
+      <!-- questions-section
       <section class="questions">
         <h2 class="question-head"></h2>
         <ul class="list of options">
-          <li class="list-items"></li>
-          <li class="list-items"></li>
+          <li class="list-item"></li>
+          <li class="list-item"></li>
         </ul>
         <div class="btn-control">
           <button class="btn" id="next-button">Next</button>
