options array and question

--- a/index1.html
+++ b/index1.html
@@ -38,8 +38,8 @@
           <button class="start-quiz" id="start-btn">Start!</button>
         </div>
       </section>
-      <!-- questions-section
-      <section class="questions">
+      questions-section
+      <!-- <section class="questions">
         <h2 class="question-head"></h2>
         <ul class="list of options">
           <li class="list-item"></li>
