remove question section

--- a/index1.html
+++ b/index1.html
@@ -38,8 +38,8 @@
           <button class="start-quiz" id="start-btn">Start!</button>
         </div>
       </section>
-      questions-section
-      <!-- <section class="questions">
+      <!-- questions-section -->
+      <section class="questions">
         <h2 class="question-head"></h2>
         <ul class="list of options">
           <li class="list-item"></li>
@@ -48,7 +48,7 @@
         <div class="btn-control">
           <button class="btn" id="next-button">Next</button>
         </div>
-      </section> -->
+      </section>
 
       <!-- timer section -->
       <section id="timer-section">
