completed appending form in java script

--- a/index1.html
+++ b/index1.html
@@ -38,7 +38,7 @@
           <button class="start-quiz" id="start-btn">Start!</button>
         </div>
       </section>
-      <!-- questions-section -->
+      <!-- questions-section
       <section class="questions">
         <h2 class="question-head"></h2>
         <ul class="list of options">
@@ -48,24 +48,27 @@
         <div class="btn-control">
           <button class="btn" id="next-button">Next</button>
         </div>
-      </section>
+      </section> -->
 
       <!-- timer section -->
       <section id="timer-section">
         <p><span id="timer-span">Time Remaining:</span></p>
       </section>
-      <!-- form section -->
-      <section id="form-selection">
-        <form class="form">
-          <!-- score -->
-          <h6 id="score">Your score is :</h6>
-          <div input type="number"></div>
+      <!-- form section
+      <section id="form-selection" name="form-selector">
+        <h6 class="form-scores">Form for your scores</62>
+        <form class="form"></form>
           <!-- full name -->
-          <div class="full-name-input" input type="text">Name Input</div>
-          <!-- button -->
-          <div id="btn">
-            <button type="submit" class="btn-2">submit</button>
+          <!-- <div class="full-name-input">
+            <input  name="full-name-1"
+            class="name"
+             type="text"
+              placeholder="full-name" />
           </div>
+          <!-- button -->
+          <!-- <div id="btn-form">
+            <button class="btn-2" type="submit">submit</button> -->
+          <!-- </div> --> --> -->
           <!-- render alert -->
           <div class="alert" role="alert">Please enter your name.</div>
         </form>
