styled timer and rendering timer and intervals

--- a/index1.html
+++ b/index1.html
@@ -52,8 +52,13 @@
 
       <!-- timer section -->
       <section id="timer-section">
-        <p><span id="timer-span">Time Remaining:</span></p>
+        <div class="timer">
+        <p class="time-left">
+          <span id="timer-span">Time Remaining: </span>
+        </p>
+      </div>
       </section>
+      
       <!-- form section
       <section id="form-selection" name="form-selector">
         <h6 class="form-scores">Form for your scores</62>
