table for high scores added on html

--- a/index1.html
+++ b/index1.html
@@ -21,7 +21,7 @@
       <!-- nav link home -->
       <nav class="nav-container">
         <a href="index1.html" class="nav-link"> Home </a>
-        <a href="./secondpage.html" class="nav-link"> Highscores </a>
+        <a href="./highscores.html" class="nav-link"> Highscores </a>
       </nav>
     </header>
 
@@ -50,14 +50,12 @@
         </div>
       </section> -->
 
-      <!-- timer section -->
+      <!-- timer section
       <section id="timer-section">
         <div class="timer">
-        <p class="time-left">
-          <span id="timer-span">Time Remaining: </span>
-        </p>
+          <span id="time-span" class="time-span-class">Time Remaining: </span>
       </div>
-      </section>
+      </section> -->
       
       <!-- form section
       <section id="form-selection" name="form-selector">
@@ -74,8 +72,6 @@
           <!-- <div id="btn-form">
             <button class="btn-2" type="submit">submit</button> -->
           <!-- </div> --> --> -->
-          <!-- render alert -->
-          <div class="alert" role="alert">Please enter your name.</div>
         </form>
       </section>
     </main>
