styled both pages and appended form correctly

--- a/index1.html
+++ b/index1.html
@@ -56,24 +56,27 @@
           <span id="time-span" class="time-span-class">Time Remaining: </span>
       </div>
       </section> -->
-      
-      <!-- form section
-      <section id="form-selection" name="form-selector">
-        <h6 class="form-scores">Form for your scores</62>
-        <form class="form"></form>
+
+      <!-- form section -->
+      <!-- <section id="form-selection" name="form-selector">
+        <h6 class="form-scores">
+          Please Input Details And Click Submit To View Score:
+        </h6>
+        <form class="form-1">
           <!-- full name -->
           <!-- <div class="full-name-input">
-            <input  name="full-name-1"
-            class="name"
-             type="text"
-              placeholder="full-name" />
+            <input
+              name="full-name-1"
+              class="name"
+              type="text"
+              placeholder="full-name"
+            />
           </div>
-          <!-- button -->
-          <!-- <div id="btn-form">
-            <button class="btn-2" type="submit">submit</button> -->
-          <!-- </div> --> --> -->
+          <div id="btn-form">
+            <button class="btn-2" type="submit">submit</button>
+          </div>
         </form>
-      </section>
+      </section> --> -->
     </main>
     <script src="./assets/js/script.js"></script>
   </body>
