fixed local storage

--- a/highscores.html
+++ b/highscores.html
@@ -16,18 +16,18 @@
     </nav>
   </header>
   <body>
-    <main class="high-score-main">
-      <section class="high-scores-section">
+    <main id="high-score-main">
+      <section id="high-score-id" class="high-scores-section">
         <h1 class="table-high-scores">Table Of Highscores</h1>
         <div class="table-container">
           <table class="table-scores">
             <tr class="table">
-              <th class="table-heading">Name</th>
-              <th class="table-heading">Score</th>
+              <th class="table-heading-1">Name</th>
+              <th class="table-heading-2">Score</th>
             </tr>
             <tr class="table-result">
-              <td class="table-data">Osman</td>
-              <td class="table-data">32</td>
+              <td class="table-data-1"></td>
+              <td class="table-data-2"></td>
             </tr>
           </table>
         </div>
