--- a/index1.html
+++ b/index1.html
@@ -64,7 +64,7 @@
         </h6>
         <form class="form-1">
           <!-- full name -->
-          <!-- <div class="full-name-input">
+      <!-- <div class="full-name-input">
             <input
               name="full-name-1"
               class="name"
@@ -76,7 +76,8 @@
             <button class="btn-2" type="submit">submit</button>
           </div>
         </form>
-      </section> --> -->
+      </section> -->
+
     </main>
     <script src="./assets/js/script.js"></script>
   </body>
