completed high socres

--- a/highscores.html
+++ b/highscores.html
@@ -17,7 +17,7 @@
   </header>
   <body>
     <main id="high-score-main">
-      <section id="high-score-id" class="high-scores-section">
+      <!-- <section id="high-score-id" class="high-scores-section">
         <h1 class="table-high-scores">Table Of Highscores</h1>
         <div class="table-container">
           <table class="table-scores">
@@ -31,7 +31,7 @@
             </tr>
           </table>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <script src="./assets/js/highscores.js"></script>
