--- a/index1.html
+++ b/index1.html
@@ -77,6 +77,14 @@
           </div>
         </form>
       </section> -->
+      <!-- <section id="render-game-over">
+        <h6 class="game-over">
+          Unfortunatley The Game Is Over Click Start Over.
+        </h6>
+        <div class="start-over-button">
+          <button class="start-over" type="start-over">Start Over</button>
+        </div>
+      </section> -->
     </main>
     <script src="./assets/js/script.js"></script>
   </body>
